--- a/Server/CMakeLists.txt
+++ b/Server/CMakeLists.txt
@@ -5,8 +5,6 @@ set(SOURCES
 	config.hpp
 	client.cpp
 	client.hpp
-	command.cpp
-	command.hpp
 	main.cpp
 	server.cpp
 	server.hpp
@@ -14,4 +12,5 @@ set(SOURCES
 
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}")
 add_executable(SppMsgServer "${SOURCES}")
+target_link_libraries(SppMsgServer SppMsgUtility)
 cg_link_common(SppMsgServer)
