Imported CGUI from CarGame.
Added library used in almost every of my projects - CG User Interface library. It's ugly code but works :)

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -14,11 +14,11 @@ endmacro()
 
 macro(cg_link_common target)
 	target_include_directories(${target} PUBLIC "${CMAKE_SOURCE_DIR}")
-	#target_include_directories(${target} PUBLIC "${CMAKE_SOURCE_DIR}/cgui_fork/include")
+	target_include_directories(${target} PUBLIC "${CMAKE_SOURCE_DIR}/CGUI/include")
 	#target_include_directories(${target} PUBLIC "${CMAKE_SOURCE_DIR}/hmutil/include")
 	st2_link_sfml(${target})
 	#target_link_libraries(${target} hmutil)
-	#target_link_libraries(${target} cgui)
+	target_link_libraries(${target} cgui)
 	target_link_directories(${target} PUBLIC "${CMAKE_BINARY_DIR}")
 endmacro()
 
@@ -41,9 +41,9 @@ cg_detect_arch()
 cg_find_sfml()
 
 #st2_compile_lib(hmutil "hmutil")
-#st2_compile_lib(cgui "cgui_fork")
+st2_compile_lib(cgui "CGUI")
 #target_include_directories(cgui PUBLIC "${CMAKE_SOURCE_DIR}/src/")
-#st2_link_sfml(cgui)
+st2_link_sfml(cgui)
 
 add_subdirectory(Client)
 add_subdirectory(Server)
